--- a/Client/src/app/core/nav-bar-docheader/nav-bar-docheader.component.html
+++ b/Client/src/app/core/nav-bar-docheader/nav-bar-docheader.component.html
@@ -22,8 +22,41 @@
         </ul>
     </div>
     <div class="users">
-        <a href="#" class="m-2 text-dark" routerLink="/patients">Login</a>
-        <a href="#" class="m-2 text-dark">Sign in</a>
+        <ng-container *ngIf="(accountService.currentUser$ | async) === null">
+            <a class="m-2 text-dark" routerLink="/account/login">Login</a>
+            <a class="m-2 text-dark" routerLink="/account/register">Sign in</a>
+        </ng-container>
+
+        <ng-container *ngIf="accountService.currentUser$ | async as user">
+            <div class="dropdown ms-3 me-5" style="cursor:pointer;" dropdown>
+                <a dropdownToggle class="dropdown-toggle">
+                    <strong>
+                        Welcome Dr {{user.displayName}}
+                    </strong>
+                </a>
+                <ul *dropdownMenu class="dropdown-menu dropdown-menu-right">
+                    <li>
+                        <a routerLink="/patients" class="dropdown-item">
+                            <mat-icon>personal_injuryrson</mat-icon>
+                            <span>User</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a routerLink="/patients" class="dropdown-item">
+                            <mat-icon>person</mat-icon>
+                            <span>Patients</span>
+                        </a>
+                    </li>
+                    <div class="dropdown-divider"></div>
+                    <li>
+                        <a (click)="accountService.logout()" class="dropdown-item">
+                            <mat-icon>logout</mat-icon>
+                            <span>Log Out</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </ng-container>
     </div>
 </mat-toolbar>
 
