--- a/Client/src/app/core/side-bars/side-bars.component.html
+++ b/Client/src/app/core/side-bars/side-bars.component.html
@@ -3,8 +3,13 @@
 <div class="sidenav-header">
   <img [width]="profilePicSize()" [height]="profilePicSize()" src="/assets/images/profile.jpg" />
   <div class="header-text" [class.hide-header-text]="sideNavCollapsed()">
-      <h2>Dr</h2>
-      <p>Andder Frias</p>
+    <ng-container *ngIf="accountService.currentUser$ | async as user">
+    <h2>Dr</h2>
+    <p>{{user.displayName}}</p>
+      
+    </ng-container>
+    <!-- <h2>Dr</h2>
+    <p>Andder Frias</p> -->
   </div>
 </div>
 
