--- a/Client/src/app/account/register/register.component.html
+++ b/Client/src/app/account/register/register.component.html
@@ -1,1 +1,23 @@
-<p>register works!</p>
+<div class="d-flex justify-content-center mt-5">
+    <div class="col-3 login">
+        <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+            <div class="text-center mb-4">
+                <h1 class="mb-3">Sign Up</h1>
+            </div>
+            
+            <app-text-input [formControl]="registerForm.controls['firstName']" [label]="'First Name'"></app-text-input>
+            <app-text-input [formControl]="registerForm.controls['lastName']" [label]="'Last Name'"></app-text-input>
+            <app-text-input [formControl]="registerForm.controls['displayName']" [label]="'Display Name'"></app-text-input>
+            <app-text-input [formControl]="registerForm.controls['email']" [label]="'Email Address'"></app-text-input>
+            <app-text-input [formControl]="registerForm.controls['password']" [type]="'password'" [label]="'Password'"></app-text-input>
+
+            <ul class="text-danger list-unstyled" *ngIf="errors">
+                <li *ngFor="let error of errors">{{error}}</li>
+            </ul>
+
+            <div class="d-grid">
+                <button [disabled]="registerForm.invalid" class="btn btn-lg btn-secondary mt-3" type="submit">Sign Up</button>
+            </div>
+        </form>
+    </div>
+</div>
