modified some style

--- a/Client/src/app/appointment/appointment-item/appointment-item.component.scss
+++ b/Client/src/app/appointment/appointment-item/appointment-item.component.scss
@@ -16,7 +16,7 @@ mat-card {
 
 .status {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
 
     p {
         margin-left: 5px;
