--- a/Client/src/app/notes/notes-item/notes-item.component.scss
+++ b/Client/src/app/notes/notes-item/notes-item.component.scss
@@ -16,7 +16,7 @@ mat-card {
 
 .status {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
 
     p {
         margin-left: 5px;
