--- a/Client/src/app/patient/patient.component.scss
+++ b/Client/src/app/patient/patient.component.scss
@@ -15,7 +15,6 @@ $breakpoint-mobile: 480px;
     }
 
     .box {
-      margin-top: 15px;
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -79,11 +78,40 @@ $breakpoint-mobile: 480px;
     }
   }
 
+  .create {
+    padding: 10px;
+    display: flex;
+    justify-content: flex-end;
+
+    button {
+      border: none;
+      display: flex;
+      align-items: center;
+      margin: 10px;
+      padding: 6px 20px;
+      color: #FFFFFF;
+      border-radius: 5px;
+      background-color: #30a636;
+      transition: 0.2s;
+
+      &:hover {
+        padding: 7px 21px;
+        background-color: #298a2e;
+
+      }
+
+      mat-icon {
+        margin-right: 10px;
+      }
+
+    }
+  }
+
   .cards-box {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
 
-    margin-top: 60px;
+    // margin-top: 20px;
 
     .card-box {
       padding: 20px;
